--- a/res/values/custom_arrays.xml
+++ b/res/values/custom_arrays.xml
@@ -79,4 +79,18 @@
         <item>1</item>
     </string-array>
 
+    <!-- Legacy WFD -->
+    <string-array name="legacy_wfd_video_mode_entries" translatable="false">
+          <item>@string/legacy_wfd_video_mode_720p_30fps</item>
+          <item>@string/legacy_wfd_video_mode_720p_60fps</item>
+          <item>@string/legacy_wfd_video_mode_1080p_30fps</item>
+          <item>@string/legacy_wfd_video_mode_1080p_60fps</item>
+    </string-array>
+
+    <string-array name="legacy_wfd_video_mode_values" translatable="false">
+          <item>5</item>
+          <item>6</item>
+          <item>7</item>
+          <item>8</item>
+    </string-array>
 </resources>
