--- a/res/values/customx_strings.xml
+++ b/res/values/customx_strings.xml
@@ -299,5 +299,6 @@
     <string name="power_menu_airplane_title">Airplane mode</string>
     <string name="power_menu_users_title">User switcher</string>
     <string name="power_menu_lockdown_title">Lockdown</string>
+    <string name="power_menu_lockdown_unavailable">Lockdown is disabled as keyguard isn\'t secure</string>
 
 </resources>
