PowerMenuActions: Add emergency option
This allows toggling Emergency button in GlobalAction(Power menu).

Signed-off-by: Gegham Zakaryan <zakaryan.2004@outlook.com>
Change-Id: I190048e213a08a969e10aef4081650875dab2587

--- a/res/values/customx_strings.xml
+++ b/res/values/customx_strings.xml
@@ -300,5 +300,6 @@
     <string name="power_menu_users_title">User switcher</string>
     <string name="power_menu_lockdown_title">Lockdown</string>
     <string name="power_menu_lockdown_unavailable">Lockdown is disabled as keyguard isn\'t secure</string>
+    <string name="power_menu_emergency_title">Emergency</string>
 
 </resources>
