[2/2] Allow changing face unlock method when locked
Change-Id: I143bde86acc2a4ada27c0ef739eb87d20cfc6512

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -125,4 +125,9 @@
     <string name="fod_gesture_title">Unlock with fingerprint when the screen is off</string>
     <string name="fod_gesture_summary">Allows unlocking the device without having to wake up the screen first</string>
 
+    <!-- Face Unlock -->
+    <string name="face_unlock_method_title">Face unlock method when locked</string>
+    <string name="face_unlock_method_default">Turn screen on</string>
+    <string name="face_unlock_method_swipe">Swipe on lock screen</string>
+
 </resources>
