--- a/res/values/custom_arrays.xml
+++ b/res/values/custom_arrays.xml
@@ -69,4 +69,14 @@
          NOTE: This list must have the exact same items count as config_availableColorModes -->
     <string-array name="available_vendor_color_modes" translatable="false" />
 
+    <!-- Face Unlock -->
+    <string-array name="face_unlock_method_entries">
+        <item>@string/face_unlock_method_default</item>
+        <item>@string/face_unlock_method_swipe</item>
+    </string-array>
+    <string-array name="face_unlock_method_values">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
 </resources>
