Improve face unlock method string
Change-Id: I79bd7f488381b961edb86e631cef14408abd63a2

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -126,7 +126,7 @@
     <string name="fod_gesture_summary">Allows unlocking the device without having to wake up the screen first</string>
 
     <!-- Face Unlock -->
-    <string name="face_unlock_method_title">Allow face unlock when</string>
+    <string name="face_unlock_method_title">Allow face unlock on lock screen</string>
     <string name="face_unlock_method_default">When the screen is turned on</string>
     <string name="face_unlock_method_swipe">When swiping on lock screen</string>
 
