Improve lockdown strings
Change-Id: I646ade31dfd7ee9efd3aa706464a6fb1b2ee7327

--- a/res/values/customx_strings.xml
+++ b/res/values/customx_strings.xml
@@ -299,7 +299,7 @@
     <string name="power_menu_airplane_title">Airplane mode</string>
     <string name="power_menu_users_title">User switcher</string>
     <string name="power_menu_lockdown_title">Lockdown</string>
-    <string name="power_menu_lockdown_unavailable">Lockdown is disabled as keyguard isn\'t secure</string>
+    <string name="power_menu_shortcut_unavailable">Disabled because lock screen is not protected</string>
     <string name="power_menu_emergency_title">Emergency</string>
 
     <!-- App Lock -->
